<resources>
    <string name="app_name">Homework_5</string>
    <string name="input_email_hint_AM_XML">Кому:</string>
    <string name="input_subject_hint_AM_XML">Тема:</string>
    <string name="input_message_hint_AM_XML">Сообщение:</string>
    <string name="button_send_email_text_AM_XML">Отправить</string>
    <string name="button_call_help_text_AM_XML">Звонок</string>
    <string name="toast_access_denied_AM">Access denied</string>
    <string name="toast_please_chage_decision_AM">I just want to call help. Please change your mind
        and tap CallButton one more time</string>
    <string name="help_phone_AM">0505989456</string>
    <string name="toast_empty_email_adress_AM">Please, input email recipient</string>
    <string name="toast_empty_email_subject_AM">Please, input email subject</string>
    <string name="toast_empty_email_text_AM">Please, input email message</string>
    <string name="toast_wrong_email_adress_AM">Invalid email adress</string>
    <string name="toast_no_client_installed_AM">There is no email client installed</string>
    <string name="send_to">Send via</string>
</resources>
